# translate

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: syntax.txt
examples/: translate.rs
src/: lib.rs  parsing.rs
